--- a/src/assets/less/main.less
+++ b/src/assets/less/main.less
@@ -6,21 +6,7 @@
     visibility: hidden;
     position: relative;
 }
-@media (min-width: 800px) {
-	.containerInv { grid-template-columns: repeat(3, 1fr); }
-	.containerTool { grid-template-columns: repeat(3, 1fr); }
-	.container { grid-template-columns: repeat(3, 1fr); }
-  }
-  @media (min-width: 400px) {
-	.containerInv { grid-template-columns: repeat(1, 1fr); }
-	.containerTool { grid-template-columns: repeat(2, 1fr); }
-	.container { grid-template-columns: repeat(2, 1fr); }
-  }
-  @media (min-width: 100px) {
-	.containerInv { grid-template-columns: repeat(1, 1fr); }
-	.containerTool { grid-template-columns: repeat(1, 1fr); }
-	.container { grid-template-columns: repeat(1, 1fr); }
-  }
+
 .toBeReplaced:after {
     visibility: visible;
     position: absolute;
@@ -33,6 +19,11 @@
 	height: 100%;
 	font-family: sans-serif;
 	font-size: 16px;
+	@media screen and (prefers-color-scheme: dark) {
+		.containerInv{background-color: @COLOR_Midnight_800;}
+		.containerTool{background-color: @COLOR_Midnight_800;}
+		.container{background-color: @COLOR_Midnight_800;}
+	}
   }
   hr.solid{
 	border-top: 3px dashed #BBBDC4;
@@ -51,6 +42,35 @@
 	padding: 0px;
 	border-radius: 10px;
 	margin: 10px;
+  }
+  .containerCommunity{
+	display: grid;
+	max-width: 1200px;
+	width: 100%;
+	grid-template-columns: 
+	   auto;
+	padding: 0px;
+	border-radius: 10px;
+	margin: 20px;
+  }
+  .itemCommunity{
+	background-color: #00D2E6;
+	border: 1px solid #fff;
+	padding: 4%;
+	font-size: 30px;
+	text-align: center;
+	border-radius: 4px;
+	box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.24);
+	h5{
+		color:#fff;
+	}
+	.aHub{
+		color:#fff;
+	}
+  }
+  .itemCommunity:hover{
+	background-color: #00A3B3; 
+	color:#fff;
   }
   
   .h3Hub {
@@ -149,6 +169,7 @@
 	  color: #ffffff;
 	}
   }
+  
 .container {
 	display: grid;
 	width: 100%;
@@ -165,8 +186,7 @@
   }
   .containerInv {
 	display: grid;
-	grid-template-columns: 
-	   auto auto auto auto;
+    grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
 	grid-column-gap: 10px;
 	grid-row-gap: 25px;
 	background-color: #fff;
@@ -208,12 +228,15 @@
 	top: 100px; //
 	width: 150px;
 	background-color: #00A3B3;
+	border-radius: 4px;
 	color:#fff;
 	font-size: 16px;
 	line-height: normal;
 	padding: 20px 20px 20px 20px;
-	position: absolute;
+	position: relative;
+	margin-top: 20%;
   	z-index: 1;
+	align-self: left;
   }
   .item {
 	background-color: #00D2E6;
